# game-engine-ai

Game engine/Cmake/: CMakeLists.txt
Game engine/Cmake/doc/: Structure.txt
Game engine/ai/: ai_module.cpp  ai_module.h
Game engine/encryption/: encryption.cpp  encryption.h
Game engine/engine_metadata/: engine_metadata.cpp  engine_metadata.h
Game engine/graphices/: renderer.ccp  renderer.h  splash_screen.cpp
Game engine/input/: input_manager.cpp  input_manager.h
Game engine/platform/: mobile_settings.cpp  mobile_settings.h  pc-setting.cpp  pc_settings.h  platform_selector.h  select platform.cpp  tablet_settings.cpp  tablet_settings.h
Game engine/services/: game_registry.cpp  game_registry.h
